Fix table alignment

--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -10,6 +10,11 @@
 html, body, .notepad-post-container, .notepad-post-header {
   height: 100%; }
 
+table{
+  margin-left: inherit;
+  margin-right: inherit;
+  }
+
 .notepad-post-header-title {
   display: inline-block;
   padding: 0;
